# floodsos-complete

./: .gitignore  README.md  package-lock.json
Sos-backend/: .env  package-lock.json  package.json  server.js
Sos-backend/uploads/: 1769221754105-sos_record_1769221601689.m4a  1769568133702-sos_record_1769568080901.m4a  1769759650150-sos_record_1769759638969.m4a  1770891968492-sos_record_1770891961677.m4a
Sos-backend/uploads/voice/: voice-1768102981822.m4a  voice-1768103028173.m4a  voice-1768105290047.m4a  voice-1768121793135.m4a  voice-1768194911149.m4a  voice-1768292595091.m4a  voice-1768292624791.m4a  voice-1768294378563.m4a  voice-1768740690623.m4a
frontend-flutter/: README.md  pubspec.yaml
frontend-flutter/android/app/: build.gradle.kts
frontend-flutter/android/app/src/main/: AndroidManifest.xml
frontend-flutter/android/app/src/main/kotlin/com/example/floodsos/: MainActivity.kt
frontend-flutter/ios/Runner/: AppDelegate.swift  Info.plist
frontend-flutter/ios/Runner.xcodeproj/: project.pbxproj
frontend-flutter/lib/: main.dart
frontend-flutter/lib/config/: app_config.dart  theme_config.dart
frontend-flutter/lib/models/: drone_model.dart  sos_alert_model.dart  sos_model.dart  user_model.dart  weather_model.dart
frontend-flutter/lib/navigation/: app_router.dart
frontend-flutter/lib/providers/: auth_provider.dart  location_provider.dart  sos_provider.dart  voice_provider.dart  weather_provider.dart
frontend-flutter/lib/screens/: admin_dashboard_screen.dart  admin_login_screen.dart  admin_map_screen.dart  alerts_list_screen.dart  chat_screen.dart  home_screen.dart  login_screen.dart  map_screen.dart  panic_sos_screen.dart  profile_screen.dart  register_screen.dart  sos_tracking_screen.dart  splash_screen.dart  voice_sos_screen.dart  weather_screen.dart
frontend-flutter/lib/services/: api_service.dart  firebase_service.dart  firebase_service_mobile.dart  firebase_service_stub.dart  location_service.dart  notification_service.dart  notification_service_safe.dart  offline_service.dart  priority_service.dart  socket_service.dart  weather_service.dart
frontend-flutter/lib/widgets/: page_header.dart  stat_card.dart  status_badge.dart
frontend-flutter/linux/: CMakeLists.txt
frontend-flutter/linux/runner/: my_application.cc
frontend-flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend-flutter/macos/Runner.xcodeproj/: project.pbxproj
frontend-flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend-flutter/macos/Runner/Configs/: AppInfo.xcconfig
frontend-flutter/test/: widget_test.dart
frontend-flutter/web/: index.html  manifest.json
frontend-flutter/windows/: CMakeLists.txt
frontend-flutter/windows/firebase_cpp_sdk_windows/: CMakeLists.txt
frontend-flutter/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
frontend-flutter/windows/runner/: Runner.rc  main.cpp
